<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Powerful Meal Planner</string>
    <string name="hello_world">Hello world!</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="new_recipe">New Recipe</string>
    <string name="recipies_list">Recipies List</string>
    <string name="callendar">Calendar</string>
    <string name="shopping_list">Shopping List</string>
    <string name="title_activity_shopping_list">ShoppingListActivity</string>
    <string name="title_activity_recipe_list">RecipeListActivity</string>
    <string name="title_activity_add_shopping_item">AddShoppingItemActivity</string>
    <string name="title_activity_add_recipe_item">AddRecipeItemActivity</string>
    <string name="add">Add</string>
    <string name="change_mode">Shopping ON</string>
    <string name="change_mode_off">Shopping OFF</string>
    <string name="shopping_mode_on_toast">Shopping Mode turned ON</string>
    <string name="shopping_mode_off_toast">Shopping Mode turned OFF</string>
    <string name="ingredients">Ingredients</string>
    <string name="button_name">Add ingredient</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="name_hint">Type the name for this product</string>
    <string name="quantity_hint">How many ?</string>
    <string name="unit_hint">What unit?</string>
    <string name="add_item">Add Item</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="fields_cannot_be_empty">Fields cannot be empty</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="action_settings">Settings</string>
    <string name="generate">Select Days For List</string>
    <string name="add_a_recipe_from_list">Add recipe from list</string>
    <string name="new_">New</string>
    <string name="add_checked">Add checked</string>
    <string name="create_list">Generate List</string>
    <string name="select_the_first_day">Select the first day</string>
    <string name="select_the_last_day">Select the last day</string>
    <string name="title_activity_help">Help</string>
    <string name="help">Help</string>
    <string name="help_1">Application is divided into four sections - Shopping List, Recipes List, Calendar and Help. You can access navigation menu by tapping the icon in the upper-left corner of the screen.\n\nStart by adding your recipes to the Recipes List. Then, use Calendar to assign meals for upcoming days. Finally, generate your interactive Shopping List for desired number of days.</string>
    <string name="help_2">Recipes List contains every recipe you added so far. Your recipes list will be initially empty.\n\nTap "New" to create a new recipe. Then, type the name, add all the ingredients and save it. Try to put here every recipe you know and use!\n\nWhen you are ready to plan you meals, head to the Calendar section.</string>
    <string name="help_3">In Calendar section you can plan your meals for any day, and then automatically generate the shopping list, without worrying about looking up the ingredients.\n\nTap any day to access menu which lets you assign any recipe to this day.</string>
    <string name="help_4">When you already assigned recipes to the days, you can generate the shopping list.\n\nTap the "Select Days For List" option in upper-right corner of the screen. Now, set the period of time to generate shopping list for, by tapping the first and then last day of this period. Then, tap "Generate List" (upper-right corner of the screen).\n\nIt is done! Just navigate back to Shopping List section to see your shopping list.</string>
    <string name="help_5">Shopping list has two modes - shopping mode (turned on by default) and edit mode.\n\nShopping mode is designed as an interactive version of traditional shopping list. Tapping at item makes it "checked" - it will instantly appear grayed out and moved to the bottom of the list, so you can clearly see what is left to get.\n\nTap the items as you put them in your shopping cart!</string>
    <string name="help_6">Items in shopping mode are divided into six categories. You can assign category to a shopping item when creating it. If you do not do it, item will be visible under "Other" category. Of course, category may be changed later.\n\nShopping list divided into categories comes in handy when it contains a lot of items. Just displaying them all in alphabetical order on a one huge list would be confusing and impractical.</string>
    <string name="help_7">While you are still on Shopping List screen, tap the "Shopping Mode OFF" option in upper-right corner to enter Edit mode.\nNow, you can edit any item by tapping it.\n\nTo go back to the Shopping Mode, tap "Shopping Mode ON" option, again in upper-right corner of the screen.</string>
    <string name="help_8">You can always delete any recipe (on Recipes List screen) or shopping item (on Shopping List screen) by pressing the item and holding for a while.\n\nSelect the items you want to delete, then press "Delete".</string>
    <string name="help_9">Export and Import lets you effortlessly upload your recipes to your Google Drive (Export) and then, download it on any another Android device with Powerful Meal Planner installed (Import).\nThis feature requires Google Drive access - your existing Google Drive content will not be altered in any way.\nImported recipes will be added as new one, without changing or deleting your current ones.</string>
    <string name="export">Export/Import</string>
    <string name="export_option">Export</string>
    <string name="import_option">Import</string>
    <string name="export_message">Export and Import requires Google Drive access.\n\nAfter exporting your recipes, you will be able to import them on any other Android device with Powerful Meal Planner installed.\n\nTo learn more about this feature, please visit in-app Help section.</string>

    <string name="category1">Meats &amp; fish</string>
    <string name="category2">Dairy &amp; bread</string>
    <string name="category3">Fruits &amp; vegetables</string>
    <string name="category4">Cereals &amp; spices</string>
    <string name="category5">Tinned &amp; frozen</string>
    <string name="category6">Other</string>

</resources>