<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:background="@color/lightest_bronze"
                android:layout_height="match_parent"
                tools:context="${packageName}.${activityClass}">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"/>

            <AutoCompleteTextView
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name_hint">

                <requestFocus/>
            </AutoCompleteTextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"/>

                <EditText
                    android:id="@+id/quantityEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/quantity_hint"
                    android:inputType="numberDecimal">

                </EditText>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:id="@+id/radioGroup"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"
                        android:textSize="12sp"
                        android:id="@+id/meatRadioButton"
                        android:layout_height="wrap_content"
                        android:text="@string/category1"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/meat_fish"/>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="12sp"
                        android:id="@+id/dairyRadioButton"

                        android:drawablePadding="10dp"
                        android:text="@string/category2"
                        android:drawableLeft="@drawable/bread_diary"/>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/category3"
                        android:drawablePadding="10dp"
                        android:layout_marginTop="10dp"
                        android:textSize="12sp"
                        android:id="@+id/fruitsRadioButton"

                        android:drawableLeft="@drawable/fruits_vegetables"/>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/category4"
                        android:drawablePadding="10dp"
                        android:layout_marginTop="10dp"
                        android:textSize="12sp"
                        android:id="@+id/cerealsRadioButton"

                        android:drawableLeft="@drawable/spices_cerelas"/>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:drawablePadding="10dp"
                        android:layout_marginTop="10dp"
                        android:textSize="12sp"
                        android:id="@+id/tinnedRadioButton"

                        android:layout_height="wrap_content"
                        android:text="@string/category5"
                        android:drawableLeft="@drawable/tinned_frozen"/>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:layout_marginTop="10dp"
                        android:textSize="12sp"
                        android:id="@+id/otherRadioButton"

                        android:text="@string/category6"
                        android:drawableLeft="@drawable/other"/>
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit"/>

                <AutoCompleteTextView
                    android:id="@+id/unitEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/unit_hint">

                </AutoCompleteTextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_height="match_parent"
                        android:text="Tap to choose:"/>


                </LinearLayout>

                <ListView
                    android:id="@+id/commonUnitsListView"
                    android:layout_width="match_parent"
                    android:divider="@color/lightest_bronze"
                    android:overScrollMode="never"
                    android:scrollbars="none"
                    android:layout_height="wrap_content"></ListView>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>